# smog-bot

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
src/: __init__.py  config.py  main.py  models.py
src/clients/: mexc.py
src/filters/: aggregator.py  btc_tracking.py  rsi.py
src/routes/: webhook.py
src/services/: signal_logger.py  trade_logger.py
src/utils/: __init__.py  symbol_mapper.py
tests/: __init__.py  test_aggregator.py  test_btc_tracker.py  test_rsi.py  test_rsi_vs_mexc.py  test_signal_logger.py
